# trino-k8s-operator

./: .licenserc.yaml  .trivyignore  .woke.yaml  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  actions.yaml  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/: .copilot-collections.yaml
.github/workflows/: integration_test.yaml  promote_charm.yaml  publish_charm.yaml  test.yaml  test_and_publish_charm.yaml
lib/charms/comsys_libs/v0/: kubernetes_statefulset_patch.py
lib/charms/postgresql_k8s/v0/: postgresql.py
lib/charms/trino_k8s/v0/: trino_catalog.py
lib/internals/trino_k8s/v0/: trino_catalog.py
resources/: connector-required-fields.json
scripts/: import_rock.sh
src/: catalog_manager.py  charm.py  config.py  connector.py  connectors.py  database.py  literals.py  log.py  sql_catalog.py  state.py  structured_config.py  tls.py  utils.py
src/grafana_dashboards/: trino-monitoring.json.tmpl
src/loki_alert_rules/: README.md
src/prometheus_alert_rules/: trino-monitoring.rules
src/relations/: opensearch.py  policy.py  postgresql.py  postgresql_catalog.py  trino.py  trino_catalog.py  trino_coordinator.py  trino_worker.py
templates/: access-control.jinja  access-control.properties  config.jinja  db-conn.jinja  file-ranger.jinja  file-rules.jinja  file-view-only.jinja  jvm.config  jvm.jinja  logging.jinja  password-authenticator.jinja  plugin-install.jinja  ranger-plugin.jinja  ranger-trino-audit.jinja  ranger-trino-security.jinja  resource-groups.jinja  rules.jinja  session-property-config.jinja  trino-entrypoint.jinja  trino-entrypoint.sh  view-only-rules.jinja
tests/: conftest.py
tests/integration/: conftest.py  helpers.py  test_catalog_updates.py  test_charm.py  test_managers.py  test_pg_catalog_relation.py  test_policy.py  test_postgresql_relation.py  test_resources.py  test_scaling.py  test_trino_catalog_relation.py  test_upgrades.py
tests/integration/trino_catalog_requirer_charm/: actions.yaml  charmcraft.yaml  metadata.yaml  requirements.txt
tests/integration/trino_catalog_requirer_charm/lib/charms/trino_k8s/v0/: trino_catalog.py
tests/integration/trino_catalog_requirer_charm/src/: charm.py
tests/integration/trino_client/: show_catalogs.py  trino_client.py
tests/unit/: __init__.py  conftest.py  helpers.py  test_catalog_freshness.py  test_charm.py  test_pg_catalog_handler.py  test_policy.py  test_postgresql_catalog_handler.py  test_postgresql_handler.py  test_state.py
trino_rock/: rockcraft.yaml  tox.ini
trino_rock/local-files/: config.properties  jvm.config  ranger-policymgr-ssl.xml  ranger-trino-audit.xml  ranger-trino-security.xml  trino-entrypoint.sh
workflows/: integration_test.yaml
