# Copyright 2023 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "trino-k8s-operator"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "ops>=3.4.0",
    "Jinja2>=3.1.1,<4",
    "cryptography>=39.0.1",
    "jsonschema>=4.17.3",
    "bcrypt>=4.0.1",
    "cerberus>=1.3.5",
    "httpx>=0.27.2",
    "lightkube>=0.15.4",
    "lightkube-models>=1.28.1.4",
    "cosl>=1.4.0",
    "requests>=2.32.3",
    "pydantic>=2",
    "pydantic-core>=2",
]

[dependency-groups]
# Dependencies needed by vendored charm libraries at build time
charmlibs-pydeps = [
    "ops>=2.0.0",
    "lightkube>=0.15.4",
    "lightkube-models>=1.28.1.4",
    "cosl>=1.4.0",
    "pydantic>=2",
]

# Dependencies for formatting and linting
lint = [
    "ruff",
    "codespell",
    "pyright",
]

# Dependencies for static analysis / security
static = [
    "bandit[toml]",
]

# Dependencies for unit tests
unit = [
    "coverage[toml]",
    "ops[testing]",
    "pytest",
    "pytest-asyncio",
    "pydantic>=2",
    "apache-ranger==0.0.12",
]

# Dependencies for integration tests
integration = [
    "juju>=3.5",
    "pytest",
    "pytest-operator",
    "pytest-asyncio",
    "trino>=0.326.0",
    "apache-ranger==0.0.12",
]

# Testing tools configuration
[tool.bandit]
exclude_dirs = ["/venv/"]
[tool.bandit.assert_used]
skips = ["*/*test.py", "*/test_*.py", "*tests/*.py"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Linting tools configuration
[tool.ruff]
line-length = 99
lint.select = ["E", "W", "F", "C", "N", "D", "I001"]
lint.extend-ignore = [
    "D105",
    "D107",
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
lint.per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}
extend-exclude = ["__pycache__", "*.egg_info"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.codespell]
skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage"

[tool.pyright]
include = ["src/**.py"]
extraPaths = ["lib"]
