# Copyright 2023 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "trino-k8s-operator"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "ops>=3.7.1,<4",
    "Jinja2>=3.1.6,<4",
    "cryptography>=48.0.0,<49",
    "jsonschema>=4.26.0,<5",
    "bcrypt>=5.0.0,<6",
    "cerberus>=1.3.8,<2",
    "httpx>=0.28.1,<0.29",
    "lightkube>=0.21.0,<0.22",
    "lightkube-models>=1.35.0.8,<2",
    "cosl>=1.9.1,<2",
    "requests>=2.34.2,<3",
    "pydantic>=2.13.4,<3",
    "pydantic-core>=2.46.4,<3",
    "pyyaml>=6,<7",
]

[dependency-groups]
# Dependencies needed by vendored charm libraries at build time
charmlibs-pydeps = [
    "ops>=3.7.1,<4",
    "lightkube>=0.21.0,<0.22",
    "lightkube-models>=1.35.0.8,<2",
    "cosl>=1.9.1,<2",
    "pydantic>=2.13.4,<3",
    "pyyaml>=6,<7",
]

# Dependencies for formatting and linting
lint = [
    "ruff>=0.15.15,<0.16",
    "codespell>=2.4.2,<3",
    "pyright>=1.1.410,<2",
]

# Dependencies for static analysis / security
static = [
    "bandit[toml]>=1.9.4,<2",
]

# Dependencies for unit tests
unit = [
    "coverage[toml]>=7.14.1,<8",
    "ops[testing]>=3.7.1,<4",
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=0.21.2,<0.22",
    "pydantic>=2.13.4,<3",
    "apache-ranger>=0.0.12,<0.1",
]

# Dependencies for integration tests
integration = [
    "juju>=3.6.1.3,<4",
    "pytest>=9.0.3,<10",
    "pytest-operator>=0.43.2,<0.44",
    "pytest-asyncio>=0.21.2,<0.22",
    "trino>=0.337.0,<0.338",
    "apache-ranger>=0.0.12,<0.1",
]

# Testing tools configuration
[tool.bandit]
exclude_dirs = ["/venv/"]
[tool.bandit.assert_used]
skips = ["*/*test.py", "*/test_*.py", "*tests/*.py"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Linting tools configuration
[tool.ruff]
line-length = 99
lint.select = ["E", "W", "F", "C", "N", "D", "I001"]
lint.extend-ignore = [
    "D105",
    "D107",
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
lint.per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}
extend-exclude = ["__pycache__", "*.egg_info"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.codespell]
skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage"

[tool.pyright]
include = ["src/**/*.py"]
extraPaths = ["lib"]
